--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
     "prisma-migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
-    "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
-    "@mui/x-date-pickers": "^5.0.15",
     "@prisma/client": "^6.4.1",
-    "date-fns": "^4.1.0",
     "next": "15.2.0",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
