--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@mui/x-charts": "^7.27.1",
     "@prisma/client": "^6.4.1",
     "next": "15.2.0",
     "prisma": "^6.4.1",
