--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@mui/x-charts": "^7.27.1",
+    "@mui/x-data-grid": "^7.27.3",
     "@prisma/client": "^6.4.1",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.68.0",
     "next": "15.2.0",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
